ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/LoanApplicantEmployment__c.object-meta.xml
<CustomObject>
    <label>Loan Applicant Employment</label>
    <nameField>
        <label>Loan Applicant Employment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Applicant Employment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>