ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/addBacksCurrent__c.field-meta.xml
<CustomField>
    <fullName>addBacksCurrent__c</fullName>
    <label>Add Backs Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>