ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/addBacksPrevious__c.field-meta.xml
<CustomField>
    <fullName>addBacksPrevious__c</fullName>
    <label>Add Backs Previous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>