ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>Employer company’s name</description>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>