ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <description>Employer contact’s e-mail</description>
    <label>Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>