ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/ContactFax__c.field-meta.xml
<CustomField>
    <fullName>ContactFax__c</fullName>
    <description>Employer contact’s fax number</description>
    <label>Contact Fax</label>
    <length>40</length>
    <type>Text</type>
</CustomField>