ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/ContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>ContactFirstName__c</fullName>
    <description>Employer contact’s first name</description>
    <label>Contact First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>