ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/ContactLastName__c.field-meta.xml
<CustomField>
    <fullName>ContactLastName__c</fullName>
    <description>Employer contact’s last name</description>
    <label>Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>