ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/ContactMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>ContactMobilePhone__c</fullName>
    <label>Contact Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>