ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/ContactTitle__c.field-meta.xml
<CustomField>
    <fullName>ContactTitle__c</fullName>
    <label>Contact Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dr</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>