ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/depreciationCurrent__c.field-meta.xml
<CustomField>
    <fullName>depreciationCurrent__c</fullName>
    <label>Depreciation Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>