ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/depreciationPrevious__c.field-meta.xml
<CustomField>
    <fullName>depreciationPrevious__c</fullName>
    <label>Depreciation Previous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>