ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/EmployerABN__c.field-meta.xml
<CustomField>
    <fullName>EmployerABN__c</fullName>
    <description>Employer company’s ABN</description>
    <label>Employer ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>