ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/EmployerACN__c.field-meta.xml
<CustomField>
    <fullName>EmployerACN__c</fullName>
    <label>Employer ACN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>