ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/EmployerAddress__c.field-meta.xml
<CustomField>
    <fullName>EmployerAddress__c</fullName>
    <label>Employer Address</label>
    <type>Address</type>
</CustomField>