ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/EmploymentRoleSubCategory__c.field-meta.xml
<CustomField>
    <fullName>EmploymentRoleSubCategory__c</fullName>
    <label>Employment Role Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arts and Media Professionals</fullName>
            </value>
            <value>
                <fullName>Automotive and Engineering Trades Workers</fullName>
            </value>
            <value>
                <fullName>Business, Human Resource and Marketing Professionals</fullName>
            </value>
            <value>
                <fullName>Carers and Aides</fullName>
            </value>
            <value>
                <fullName>Chief Executives, General Managers and Legislators</fullName>
            </value>
            <value>
                <fullName>Cleaners and Laundry Workers</fullName>
            </value>
            <value>
                <fullName>Clerical and Office Support Workers</fullName>
            </value>
            <value>
                <fullName>Construction and Mining Labourers</fullName>
            </value>
            <value>
                <fullName>Construction Trades Workers</fullName>
            </value>
            <value>
                <fullName>Design, Engineering, Science and Transport Professionals</fullName>
            </value>
            <value>
                <fullName>Education Professionals</fullName>
            </value>
            <value>
                <fullName>Electrotechnology and Telecommunications Trades Workers</fullName>
            </value>
            <value>
                <fullName>Engineering, ICT and Science Technicians</fullName>
            </value>
            <value>
                <fullName>Factory Process Workers</fullName>
            </value>
            <value>
                <fullName>Farm, Forestry and Garden Workers</fullName>
            </value>
            <value>
                <fullName>Farmers and Farm Managers</fullName>
            </value>
            <value>
                <fullName>Food Preparation Assistants</fullName>
            </value>
            <value>
                <fullName>Food Trades Workers</fullName>
            </value>
            <value>
                <fullName>General Clerical Workers</fullName>
            </value>
            <value>
                <fullName>Health and Welfare Support Workers</fullName>
            </value>
            <value>
                <fullName>Health Professionals</fullName>
            </value>
            <value>
                <fullName>Hospitality, Retail and Service Managers</fullName>
            </value>
            <value>
                <fullName>Hospitality Workers</fullName>
            </value>
            <value>
                <fullName>ICT Professionals</fullName>
            </value>
            <value>
                <fullName>Inquiry Clerks and Receptionists</fullName>
            </value>
            <value>
                <fullName>Legal, Social and Welfare Professionals</fullName>
            </value>
            <value>
                <fullName>Machine and Stationary Plant Operators</fullName>
            </value>
            <value>
                <fullName>Mobile Plant Operators</fullName>
            </value>
            <value>
                <fullName>Numerical Clerks</fullName>
            </value>
            <value>
                <fullName>Office Managers and Program Administrators</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>