ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/EmploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>EmploymentStatus__c</fullName>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employee(PAYG)</fullName>
            </value>
            <value>
                <fullName>Self-Employed(Solo Trader)</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Home Duties or Unemployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>