ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/EmploymentType__c.field-meta.xml
<CustomField>
    <fullName>EmploymentType__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EmploymentTypes</valueSetName>
    </valueSet>
</CustomField>