ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>