ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/GrossAllowancesAmount__c.field-meta.xml
<CustomField>
    <fullName>GrossAllowancesAmount__c</fullName>
    <label>Gross Allowances Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>