ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/GrossAllowancesFrequency__c.field-meta.xml
<CustomField>
    <fullName>GrossAllowancesFrequency__c</fullName>
    <label>Gross Allowances Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periods</valueSetName>
    </valueSet>
</CustomField>