ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/GrossBonusAmount__c.field-meta.xml
<CustomField>
    <fullName>GrossBonusAmount__c</fullName>
    <label>Gross Bonus Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>