ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/grossCommissionAmount__c.field-meta.xml
<CustomField>
    <fullName>grossCommissionAmount__c</fullName>
    <label>Gross Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>