ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/GrossRegularOvertimeAmount__c.field-meta.xml
<CustomField>
    <fullName>GrossRegularOvertimeAmount__c</fullName>
    <label>Gross Regular Overtime Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>