ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/interestCurrent__c.field-meta.xml
<CustomField>
    <fullName>interestCurrent__c</fullName>
    <label>Interest Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>