ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/interestPrevious__c.field-meta.xml
<CustomField>
    <fullName>interestPrevious__c</fullName>
    <label>Interest Previous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>