ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/IsAdditional__c.field-meta.xml
<CustomField>
    <fullName>IsAdditional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Additional</label>
    <type>Checkbox</type>
</CustomField>