ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/IsCurrent__c.field-meta.xml
<CustomField>
    <fullName>IsCurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current</label>
    <type>Checkbox</type>
</CustomField>