ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/IsOnProbation__c.field-meta.xml
<CustomField>
    <fullName>IsOnProbation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is On Probation</label>
    <type>Checkbox</type>
</CustomField>