ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/IsSelfEmployed__c.field-meta.xml
<CustomField>
    <fullName>IsSelfEmployed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Self Employed</label>
    <type>Checkbox</type>
</CustomField>