ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>