ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/LoanApplicant__c.field-meta.xml
<CustomField>
    <fullName>LoanApplicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Applicant</label>
    <referenceTo>LoanApplicant__c</referenceTo>
    <relationshipLabel>Loan Applicant Employment</relationshipLabel>
    <relationshipName>Loan_Applicant_Employment</relationshipName>
    <type>Lookup</type>
</CustomField>