ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/MonthlyIncomeAmount__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIncomeAmount__c</fullName>
    <label>Monthly Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>