ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/NPBTCurrent__c.field-meta.xml
<CustomField>
    <fullName>NPBTCurrent__c</fullName>
    <label>NPBT Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>