ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/NPBTPrevious__c.field-meta.xml
<CustomField>
    <fullName>NPBTPrevious__c</fullName>
    <label>NPBT Previous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>