ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/OccupationBodiesAccountant__c.field-meta.xml
<CustomField>
    <fullName>OccupationBodiesAccountant__c</fullName>
    <label>Occupation Bodies Accountant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OccupationBodiesAccountant</valueSetName>
    </valueSet>
</CustomField>