ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/OccupationBodiesLegal__c.field-meta.xml
<CustomField>
    <fullName>OccupationBodiesLegal__c</fullName>
    <label>Occupation Bodies Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OccupationBodiesLegal</valueSetName>
    </valueSet>
</CustomField>