ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/OccupationBodiesMedical__c.field-meta.xml
<CustomField>
    <fullName>OccupationBodiesMedical__c</fullName>
    <label>Occupation Bodies Medical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OccupationBodiesMedical</valueSetName>
    </valueSet>
</CustomField>