ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/OccupationOther__c.field-meta.xml
<CustomField>
    <fullName>OccupationOther__c</fullName>
    <label>Occupation Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>