ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/OccupationsAccountant__c.field-meta.xml
<CustomField>
    <fullName>OccupationsAccountant__c</fullName>
    <label>Occupations Accountant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OccupationsAccountant</valueSetName>
    </valueSet>
</CustomField>