ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/OccupationsLegal__c.field-meta.xml
<CustomField>
    <fullName>OccupationsLegal__c</fullName>
    <label>Occupations Legal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OccupationsLegal</valueSetName>
    </valueSet>
</CustomField>