ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/OccupationsMedical__c.field-meta.xml
<CustomField>
    <fullName>OccupationsMedical__c</fullName>
    <label>Occupations Medical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OccupationsMedical</valueSetName>
    </valueSet>
</CustomField>