ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/OtherCompensation__c.field-meta.xml
<CustomField>
    <fullName>OtherCompensation__c</fullName>
    <label>Other Compensation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>