ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/OverarchingOccupation__c.field-meta.xml
<CustomField>
    <fullName>OverarchingOccupation__c</fullName>
    <label>Overarching Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OverarchingOccupations</valueSetName>
    </valueSet>
</CustomField>