ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/OverarchingOccupationOther__c.field-meta.xml
<CustomField>
    <fullName>OverarchingOccupationOther__c</fullName>
    <label>Overarching Occupation Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>