ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/PAYGEmployerType__c.field-meta.xml
<CustomField>
    <fullName>PAYGEmployerType__c</fullName>
    <label>PAYG Employer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>