ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>