ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/PrincipalPlaceOfBusiness__c.field-meta.xml
<CustomField>
    <fullName>PrincipalPlaceOfBusiness__c</fullName>
    <label>Principal Place Of Business</label>
    <type>Address</type>
</CustomField>