ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/ProbationEndDate__c.field-meta.xml
<CustomField>
    <fullName>ProbationEndDate__c</fullName>
    <label>Probation End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>