ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/ResidentialLoanApplication__c.field-meta.xml
<CustomField>
    <fullName>ResidentialLoanApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication__c</referenceTo>
    <relationshipLabel>Loan Applicant Employment</relationshipLabel>
    <relationshipName>Loan_Applicant_Employment</relationshipName>
    <type>Lookup</type>
</CustomField>