ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/RoleCategory__c.field-meta.xml
<CustomField>
    <fullName>RoleCategory__c</fullName>
    <description>Category of role during employment</description>
    <label>Role Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EmploymentRoles</valueSetName>
    </valueSet>
</CustomField>