ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/RoleDescription__c.field-meta.xml
<CustomField>
    <fullName>RoleDescription__c</fullName>
    <description>Description of role during employment</description>
    <label>Role Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>