ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/SalaryOrWages__c.field-meta.xml
<CustomField>
    <fullName>SalaryOrWages__c</fullName>
    <label>Salary Or Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>