ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/SalaryOrWagesFrequency__c.field-meta.xml
<CustomField>
    <fullName>SalaryOrWagesFrequency__c</fullName>
    <label>Salary Or Wages Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Periods</valueSetName>
    </valueSet>
</CustomField>