ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/SalaryOrWagesType__c.field-meta.xml
<CustomField>
    <fullName>SalaryOrWagesType__c</fullName>
    <label>Salary Or Wages Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeTaxTypes</valueSetName>
    </valueSet>
</CustomField>