ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of employment</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Previous Employment</fullName>
            </value>
            <value>
                <fullName>Primary Employment</fullName>
            </value>
            <value>
                <fullName>Secondary Employment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>