ctm-sf-homeloan-app/main/default/objects/LoanApplicantEmployment__c/fields/TimeInIndustry__c.field-meta.xml
<CustomField>
    <fullName>TimeInIndustry__c</fullName>
    <description>Time spent, in years, in the Industry</description>
    <label>Time In Industry</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>